// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BannerTitle renders 1`] = `
<bannerTitle__BannerTitleWrapper>
  <bannerTitle__BannerTitle>
    foo
  </bannerTitle__BannerTitle>
</bannerTitle__BannerTitleWrapper>
`;

exports[`BannerTitle renders child text  1`] = `
<bannerTitle__BannerTitleWrapper>
  <bannerTitle__BannerTitle>
    Here is a test title!
  </bannerTitle__BannerTitle>
</bannerTitle__BannerTitleWrapper>
`;
